# ofxHDR

./: .travis.yml  CMakeLists.txt
scripts/nuke/: menu.py
src/: CMakeLists.txt  HdrCalibInteract.cpp  HdrCalibInteract.hpp  HdrCalibPlugin.cpp  ImageProcessor.hpp  plugin.cpp
src/common/: Image.cpp  Image.hpp  Presets.cpp  Presets.hpp  RobertsonCalibrate.cpp  RobertsonCalibrate.hpp  RobertsonMerge.cpp  RobertsonMerge.hpp  rgbCurve.cpp  rgbCurve.hpp
src/hdrBase/: HdrBasePlugin.cpp  HdrBasePlugin.hpp  HdrBasePluginDefinition.hpp  HdrBasePluginDescriber.cpp  HdrBasePluginDescriber.hpp
src/hdrCalib/: HdrCalibPlugin.cpp  HdrCalibPlugin.hpp  HdrCalibPluginDefinition.hpp  HdrCalibPluginFactory.cpp  HdrCalibPluginFactory.hpp
src/hdrMerge/: HdrMergePlugin.cpp  HdrMergePlugin.hpp  HdrMergePluginDefinition.hpp  HdrMergePluginFactory.cpp  HdrMergePluginFactory.hpp
